lib_LTLIBRARIES = libH2OI95.la
libH2OI95_la_SOURCES = \
    apxscp.f \
    apxsct.f \
    caldlt.f \
    calpre.f \
    calscp.f \
    calsct.f \
    ctherm.f \
    dielec.f \
    evai95.f \
    fdescr.f \
    gausse.f \
    getlu.f \
    gzttbr.f \
    ifnobl.f \
    ilnobl.f \
    lejust.f \
    locase.f \
    openin.f \
    openou.f \
    pmelt.f \
    surfte.f \
    thcond.f \
    tkmelt.f \
    viscos.f \
    wrotab.f
libH2OI95_la_LDFLAGS = -version-info 0:118:0
pkgconfig_DATA = libH2OI95.pc